Resolves: fdo#42747 limits need to multiplied by num of decimal places

NumericFormatter limits need to multiplied by num of decimal places because
the arg is a long so to retain decimal places its got to be raised up by
the num of places

Change-Id: Idbc49a9b1dde5fe176e5170d3be605a998050da5
(cherry picked from commit 63885c86f866411f01f1b6fceaa07f054a5a3550)
Reviewed-on: https://gerrit.libreoffice.org/10014
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>